--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soilution</title>
-    <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/forgot_password.css' %}" />
     <style>
@@ -249,7 +249,7 @@
       style="transition: background-color 0.3s ease-in-out"
     >
       <a class="navbar-brand" href="{% url 'index' %}"
-        ><img src="{% static 'images/lalala13.png' %}" alt="logo"
+        ><img src="{% static 'images/sl.png' %}" alt="logo" width="65px" height="50px"
       /></a>
     </nav>
 
