--- a/templates/register.html
+++ b/templates/register.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soilution - Sign up</title>
-    <!-- <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" />
-    <link rel="stylesheet" href="{% static 'css/register.css' %}" /> -->
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
+    <!-- <link rel="stylesheet" href="{% static 'css/register.css' %}" /> -->
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -339,7 +339,7 @@
       style="transition: background-color 0.3s ease-in-out"
     >
       <a class="navbar-brand" href="{% url 'index' %}"
-        ><img src="{% static 'images/lalala13.png' %}" alt="logo"
+        ><img src="{% static 'images/sl.png' %}" alt="logo" width="65px" height="50px"
       /></a>
     </nav>
 
