--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soilution - Password Reset</title>
-    <!-- <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" /> -->
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
