--- a/templates/account_settings.html
+++ b/templates/account_settings.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account Settings</title>
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script
@@ -62,12 +64,16 @@
   </head>
   <body class="bg-white-100">
     <nav
-      class="bg-white-800 text-black p-1 flex justify-between items-center border-b border-solid border-[#aaa] p-2"
+      class="bg-white-800 text-black flex justify-between items-center border-b border-solid border-[#aaa] p-2 pl-0 pr-0"
     >
-      <div class="flex items-center ml-4">
-        <!-- Logo -->
-        <img src="your-logo-url-here.png" alt="Logo" class="w-10 h-10 mr-4" />
-        <span class="text-xl font-bold">Soilution</span>
+      <div class="flex items-center ml-2">
+        <a
+          href="{% url 'workspace' %}"
+          ><img
+            src="{% static 'images/sl.png' %}"
+            alt="Logo"
+            class="w-12 h-9 mr-4"
+        /></a>
       </div>
 
       <!-- Profile Chip with Dropdown -->
@@ -77,7 +83,9 @@
           id="profile-button"
         >
           <!-- Avatar -->
-          <div class="w-8 h-8 rounded-full overflow-hidden border-2 border-gray-300">
+          <div
+            class="w-8 h-8 rounded-full overflow-hidden border-2 border-gray-300"
+          >
             {% if profile_picture_url %}
             <img
               src="{{ profile_picture_url }}"
@@ -226,7 +234,7 @@
 
               <!-- Input Fields Section -->
               <div class="flex-grow">
-                <div class="space-y-6">           
+                <div class="space-y-6">
                   <!-- Username -->
                   <div>
                     <label
@@ -370,19 +378,19 @@
 
     <!-- Image preview -->
     <script>
-      const profilePictureInput = document.getElementById('profile_picture');
-      const profilePicPreview = document.getElementById('profilePicPreview');
-    
-      profilePictureInput.addEventListener('change', function(event) {
+      const profilePictureInput = document.getElementById("profile_picture");
+      const profilePicPreview = document.getElementById("profilePicPreview");
+
+      profilePictureInput.addEventListener("change", function (event) {
         const file = event.target.files[0];
-    
+
         if (file) {
           const reader = new FileReader();
-    
-          reader.onload = function(e) {
+
+          reader.onload = function (e) {
             profilePicPreview.src = e.target.result;
           };
-    
+
           reader.readAsDataURL(file);
         }
       });
