--- a/templates/crop_details.html
+++ b/templates/crop_details.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Crop Details</title>
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
   </head>
   <body>
     <nav
       class="bg-white fixed w-full text-black p-1 flex justify-between items-center border-b border-solid border-[#aaa] p-2 z-10"
     >
-      <div class="flex items-center ml-4">
-        <!-- Logo -->
-        <img src="your-logo-url-here.png" alt="Logo" class="w-10 h-10 mr-4" />
-        <span class="text-xl font-bold">Soilution</span>
+      <div class="flex items-center ml-0">
+        <a href="{% url 'workspace' %}"
+          ><img
+            src="{% static 'images/sl.png' %}"
+            alt="Logo"
+            class="w-12 h-9 mr-4"
+        /></a>
       </div>
 
       <!-- Current Workspace Display and Dropdown -->
@@ -69,18 +73,18 @@
             </li>
             {% endif %} 
             {% for workspace in workspace %} 
-              {% if workspace.id != selected_workspace.id %}
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 hover:bg-gray-200 workspace-option"
-                  data-id="{{ workspace.id }}"
-                  data-name="{{ workspace.name }}"
-                >
-                  {{ workspace.name }}
-                </a>
-              </li>
-              {% endif %} 
+            {% if workspace.id != selected_workspace.id %}
+            <li>
+              <a
+                href="#"
+                class="block px-4 py-2 hover:bg-gray-200 workspace-option"
+                data-id="{{ workspace.id }}"
+                data-name="{{ workspace.name }}"
+              >
+                {{ workspace.name }}
+              </a>
+            </li>
+            {% endif %} 
             {% endfor %}
           </ul>
         </div>
@@ -104,7 +108,7 @@
             <span
               class="w-full h-full flex justify-center items-center bg-gray-500 text-white text-sm"
             >
-              {{ user.first_name|slice:":1"|upper }}{{ user.last_name|slice:":1"|upper }}
+              {{ user.first_name|slice:":1"|upper }}{{user.last_name|slice:":1"|upper }}
             </span>
             {% endif %}
           </div>
@@ -145,150 +149,173 @@
     </nav>
 
     <div class="flex flex-1">
-        <!-- Sidebar -->
-        <div
-          id="sidebar"
-          class="bg-white text-black w-14 min-h-screen fixed mt-[4.08rem] p-4 transition-all duration-300 ease-in-out hover:w-52 group border-r border-solid border-[#aaa] group-hover:bg-white z=100"
-        >
-          <button onclick="toggleSidebar()" class="text-white mb-4 hidden">
-            ☰
-          </button>
-          <!-- <h2 class="text-xl font-bold text-center mb-6">Soilution</h2> -->
-          <nav>
-            <ul>
-              <li
-                class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+      <!-- Sidebar -->
+      <div
+        id="sidebar"
+        class="bg-white text-black w-14 min-h-screen fixed mt-[4.08rem] p-4 transition-all duration-300 ease-in-out hover:w-52 group border-r border-solid border-[#aaa] group-hover:bg-white z=100"
+      >
+        <button onclick="toggleSidebar()" class="text-white mb-4 hidden">
+          ☰
+        </button>
+        <!-- <h2 class="text-xl font-bold text-center mb-6">Soilution</h2> -->
+        <nav>
+          <ul>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+            >
+              <a
+                href="{% url 'workspace' %}"
+                class="flex items-center space-x-2"
               >
-                <a
-                  href="{% url 'workspace' %}"
-                  class="flex items-center space-x-2"
+                <img
+                  src="{% static 'images/left-arrow.png' %}"
+                  alt=""
+                  width="12"
+                  height="14"
+                />
+                <span
+                  class="text-gray-400 text-sm opacity-0 group-hover:opacity-100 transition-all"
                 >
-                  <img
-                    src="{% static 'images/left-arrow.png' %}"
-                    alt=""
-                    width="12"
-                    height="14"
-                  />
-                  <span
-                    class="text-gray-400 text-sm opacity-0 group-hover:opacity-100 transition-all"
-                  >
-                    Workspace
-                  </span>
-                </a>
-              </li>
-              <li
-                class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
-              >
-                <a href="{% url 'dashboard' %}" class="flex items-center space-x-2"
-                  ><img
-                    src="{% static 'images/dashboard.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  /><span
-                    class="opacity-0 group-hover:opacity-100 transition-all"
-                  >
-                    Dashboard
-                  </span></a
+                  Workspace
+                </span>
+              </a>
+            </li>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+            >
+              <a
+                href="{% url 'dashboard' %}"
+                class="flex items-center space-x-2"
+                ><img
+                  src="{% static 'images/dashboard.png' %}"
+                  alt=""
+                  width="18"
+                  height="18"
+                /><span
+                  class="opacity-0 group-hover:opacity-100 transition-all"
                 >
-              </li>
-              <li
-                class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+                  Dashboard
+                </span></a
               >
-                <a href="{% url 'insights' %}" class="flex items-center space-x-2">
-                  <img
-                    src="{% static 'images/chart-up.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  />
-                  <span class="opacity-0 group-hover:opacity-100 transition-all">
-                    Insight
-                  </span>
-                </a>
-              </li>
-              <li
-                class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer w-32"
+            </li>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+            >
+              <a
+                href="{% url 'insights' %}"
+                class="flex items-center space-x-2"
               >
-                <a href="{% url 'crop_details' %}" class="flex items-center space-x-2"
-                  ><img
-                    src="{% static 'images/info.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  /><span
-                    class="opacity-0 group-hover:opacity-100 transition-all"
-                  >
-                    Crop details
-                  </span></a
+                <img
+                  src="{% static 'images/chart-up.png' %}"
+                  alt=""
+                  width="18"
+                  height="18"
+                />
+                <span class="opacity-0 group-hover:opacity-100 transition-all">
+                  Insight
+                </span>
+              </a>
+            </li>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer w-32"
+            >
+              <a
+                href="{% url 'crop_details' %}"
+                class="flex items-center space-x-2"
+                ><img
+                  src="{% static 'images/info.png' %}"
+                  alt=""
+                  width="18"
+                  height="18"
+                /><span
+                  class="opacity-0 group-hover:opacity-100 transition-all"
                 >
-              </li>
-              <li
-                class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+                  Crop details
+                </span></a
               >
-                <a href="{% url 'logs' %}" class="flex items-center space-x-2"
-                  ><img
-                    src="{% static 'images/list.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  /><span
-                    class="opacity-0 group-hover:opacity-100 transition-all"
-                  >
-                    Logs
-                  </span></a
+            </li>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+            >
+              <a href="{% url 'logs' %}" class="flex items-center space-x-2"
+                ><img
+                  src="{% static 'images/list.png' %}"
+                  alt=""
+                  width="18"
+                  height="18"
+                /><span
+                  class="opacity-0 group-hover:opacity-100 transition-all"
                 >
-              </li>
-              <li
-                class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+                  Logs
+                </span></a
               >
-                <a href="{% url 'reports' %}" class="flex items-center space-x-2"
-                  ><img
-                    src="{% static 'images/bar-chart.png' %}"
-                    alt=""
-                    width="18"
-                    height="18"
-                  /><span class="opacity-0 group-hover:opacity-100 transition-all"
-                    >Reports
-                  </span></a
-                >
-              </li>
-            </ul>
-          </nav>
-        </div>
-  
-        <!-- Main Content -->
-        <div
-          class="flex-1 p-6 mt-16 ml-14 group-hover:ml-52 transition-all duration-300 ease-in-out"
-        >
-            <h1>Crop Details</h1>
-            <p>
-            View all the essential details about the crops you're working with,
-            including growth stages, health, and harvest information.
-            </p>
-            <ul>
-            <li>Crop Health Status</li>
-            <li>Growth Stage Progress</li>
-            <li>Expected Harvest Dates</li>
-            </ul>
-        </div>
+            </li>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+            >
+              <a href="{% url 'reports' %}" class="flex items-center space-x-2"
+                ><img
+                  src="{% static 'images/bar-chart.png' %}"
+                  alt=""
+                  width="18"
+                  height="18"
+                /><span class="opacity-0 group-hover:opacity-100 transition-all"
+                  >Reports
+                </span></a
+              >
+            </li>
+            <li
+              class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
+            >
+              <a
+                href="{% url 'settings' %}"
+                class="flex items-center space-x-2 active-link"
+                ><img
+                  src="{% static 'images/settings.png' %}"
+                  alt=""
+                  width="18"
+                  height="18"
+                /><span class="opacity-0 group-hover:opacity-100 transition-all"
+                  >Settings
+                </span></a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Main Content -->
+      <div
+        class="flex-1 p-6 mt-16 ml-14 group-hover:ml-52 transition-all duration-300 ease-in-out"
+      >
+        <h1>Crop Details</h1>
+        <p>
+          View all the essential details about the crops you're working with,
+          including growth stages, health, and harvest information.
+        </p>
+        <ul>
+          <li>Crop Health Status</li>
+          <li>Growth Stage Progress</li>
+          <li>Expected Harvest Dates</li>
+        </ul>
+      </div>
     </div>
 
-    <script> 
-        // Toggle Profile Dropdown
-        const profileButton = document.getElementById("profile-button");
-        const profileDropdown = document.getElementById("profile-dropdown");
-  
-        profileButton.addEventListener("click", () => {
-          profileDropdown.classList.toggle("hidden");
-        });
-  
-        // Close dropdown if clicked outside (optional)
-        document.addEventListener("click", (event) => {
-          if (!profileButton.contains(event.target)) {
-            profileDropdown.classList.add("hidden");
-          }
-        });
+    <script>
+      // Toggle Profile Dropdown
+      const profileButton = document.getElementById("profile-button");
+      const profileDropdown = document.getElementById("profile-dropdown");
+
+      profileButton.addEventListener("click", () => {
+        profileDropdown.classList.toggle("hidden");
+      });
+
+      // Close dropdown if clicked outside (optional)
+      document.addEventListener("click", (event) => {
+        if (!profileButton.contains(event.target)) {
+          profileDropdown.classList.add("hidden");
+        }
+      });
     </script>
   </body>
 </html>
