--- a/templates/detector/about.html
+++ b/templates/detector/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - Soilution</title>
-    <!-- <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" /> -->
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,11 +28,10 @@
 
       body {
         font-family: Arial, Helvetica, sans-serif;
-        background-image: url("{% static 'images/soil_image1.jpeg' %}");
-        background-size: cover;
-        background-position: center;
+        background-image: url("{% static 'images/green3.png' %}");
+        background-size: 50% auto;
+        background-position: calc(100% - 100%) calc(50% + 10%);
         background-repeat: no-repeat;
-        background-position: top;
         padding: 0;
         margin: 0;
         display: flex;
@@ -40,16 +39,15 @@
         height: 100vh;
       }
 
-      body::before {
+      /* body::before {
         content: "";
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
         z-index: -1;
-      }
+      } */
 
       .navbar {
         position: absolute;
@@ -63,27 +61,28 @@
       }
 
       .navbar-brand {
-        color: #fff !important;
+        color: #2bdf78 !important;
         font-size: 1.8rem;
         font-weight: bold;
         text-transform: uppercase;
       }
 
       .navbar-nav .nav-item .nav-link {
-        color: #fff !important;
+        color: #2bdf78 !important;
         padding: 0.8rem 1.2rem;
         font-size: 1.1rem;
+        font-weight: 700;
         transition: color 0.3s ease, background-color 0.3s ease;
       }
 
       .navbar-nav .nav-item .nav-link:hover,
       .navbar-nav .nav-item .nav-link.active {
-        color: #faba0c !important;
+        color: #2bdf78 !important;
         transition: background-color 0.3s ease-in-out;
       }
 
       .navbar-nav .nav-item .nav-link.active {
-        color: #faba0c !important;
+        color: #2bdf78 !important;
         position: relative;
       }
 
@@ -93,7 +92,7 @@
         width: 28%;
         left: 25%;
         bottom: 8px;
-        border-bottom: 2px solid #faba0c;
+        border-bottom: 2px solid #2bdf78;
       }
 
       .navbar .nav-item img {
@@ -140,17 +139,19 @@
 
       .about p {
         font-size: 1.2rem;
-        color: #fff;
+        color: #001819;
         text-align: center;
         padding: 20px;
       }
 
       .about-us {
         text-align: center;
-        color: #fff;
+        color: #001819;
         font-size: 2.5rem;
         font-weight: 800;
         font-style: italic;
+        position: relative;
+        right: -20rem;
       }
 
       .about-content {
@@ -204,6 +205,7 @@
         font-size: 20px;
         font-weight: 200;
         letter-spacing: 1px;
+        width: 25rem;
       }
 
       .wis {
@@ -232,7 +234,7 @@
       }
 
       .sv1:hover {
-        box-shadow: 0 12px 30px rgba(253, 249, 3, 0.671);
+        box-shadow: 0 12px 30px #2bdf78;
       }
 
       .sv-bg {
@@ -241,7 +243,7 @@
         left: -10px;
         width: 100px;
         height: 220px;
-        background: #faba0c;
+        background: #2bdf78;
         z-index: 10;
       }
 
@@ -291,7 +293,7 @@
         left: -2px;
         right: 0;
         bottom: 0;
-        background-image: url('{% static "images/team-border.png" %}');
+        background-image: url('{% static "images/tb.png" %}');
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
@@ -345,7 +347,7 @@
       }
 
       .footer-support a {
-        color: #faba0c;
+        color: #2bdf78;
       }
 
       .footer-social ul,
@@ -367,7 +369,7 @@
 
       .footer-social a:hover,
       .footer-legal a:hover {
-        color: #faba0c;
+        color: #2bdf78;
       }
 
       .footer-bottom {
@@ -526,7 +528,7 @@
         style="transition: background-color 0.3s ease-in-out"
       >
         <a class="navbar-brand" href="{% url 'index' %}"
-          ><img src="{% static 'images/lalala13.png' %}" alt="logo"
+          ><img src="{% static 'images/sl.png' %}" alt="logo" width="65px" height="50px"
         /></a>
         <button
           class="navbar-toggler"
@@ -565,7 +567,7 @@
         </div>
       </nav>
 
-      <div class="about-us">
+      <div class="about-us" data-aos="fade-up" data-aos-delay="100">
         <span class="lead">About Us</span>
         <p class="about-desc">
           Empowering Farmers and Restoring Soil for a Sustainable Future
@@ -698,7 +700,7 @@
                 <div class="team-member">
                   <div class="image-container">
                     <img
-                      src="{% static 'images/the-prynz.jpg' %}"
+                      src="{% static 'images/prynz2.png' %}"
                       alt="Team Member 2"
                       class="img-fluid rounded-circle"
                       style="width: 180px; height: 180px; object-fit: cover"
@@ -713,7 +715,7 @@
                 <div class="team-member">
                   <div class="image-container">
                     <img
-                      src="{% static 'images/the-idk.jpg' %}"
+                      src="{% static 'images/the-idk2.png' %}"
                       alt="Team Member 3"
                       class="img-fluid rounded-circle"
                       style="width: 180px; height: 180px; object-fit: cover"
@@ -733,7 +735,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-about">
-          <img src="{% static 'images/lalala13.png' %}" alt="" />
+          <img src="{% static 'images/slll.png' %}" alt="" />
           <p>Empowering Your Soil <br />for Optimal Growth</p>
         </div>
 
@@ -741,9 +743,9 @@
           <h3>Customer Support</h3>
           <p>
             Email:
-            <a href="#">support@soilution.com</a>
+            <a href="#">soilution42@gmail.com</a>
           </p>
-          <p>Phone: <a href="#">+1 (555) 123-4567</a></p>
+          <p>Phone: <a href="#">+63 9784 324 5766</a></p>
         </div>
 
         <div class="footer-legal">
