--- a/templates/detector/index.html
+++ b/templates/detector/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soilution</title>
-    <!-- <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" /> -->
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,17 +36,18 @@
 
       body {
         font-family: Arial, sans-serif;
-        background-image: url("{% static 'images/hero_bg2.jpeg' %}");
-        background-size: cover;
-        background-position: center;
+        background-image: url("{% static 'images/s_bg1.png' %}");
+        background-size: 60% auto;
+        background-position: calc(100% + 15%) calc(50% + 10%);
         background-repeat: no-repeat;
-        background-position: top;
+        /* background-position: top; */
         margin: 0;
         display: flex;
         flex-direction: column;
+        height: 100vh;
       }
 
-      body::before {
+      /* body::before {
         content: "";
         position: absolute;
         top: 0;
@@ -55,11 +56,12 @@
         height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         z-index: -1;
-      }
+      } */
 
       .material-symbols-outlined {
         font-size: 2rem;
-        color: #faba0c;
+        /* color: #faba0c; #2bdf78 */
+        color: #2bdf78;
         margin-right: 10px;
         margin-top: 0;
       }
@@ -91,7 +93,7 @@
       }
 
       .hero-content h5 {
-        color: #faba0c;
+        color: #2bdf78;
         font-weight: 500;
         animation-delay: 100ms;
       }
@@ -100,6 +102,7 @@
         font-size: 4.5rem;
         font-weight: 800;
         animation-delay: 400ms;
+        color: #001819;
       }
 
       .hero-content h1.main-title-2 {
@@ -107,6 +110,7 @@
         font-weight: 800;
         animation-delay: 600ms;
         animation-duration: 1s;
+        color: #001819;
       }
 
       .hero-content p.hero-desc {
@@ -114,6 +118,7 @@
         font-weight: 500;
         animation-delay: 800ms;
         animation-duration: 1s;
+        color: #001819;
       }
 
       .buttons-container {
@@ -143,7 +148,7 @@
       }
 
       .cta-button.green a {
-        background-color: #faba0c;
+        background-color: #2bdf78;
         color: #fff;
         border: 2px solid #fff;
       }
@@ -162,8 +167,8 @@
       }
 
       .cta-button.green a:hover {
-        color: #faba0c;
-        border: 2px solid #faba0c;
+        color: #2bdf78;
+        border: 2px solid #2bdf78;
       }
 
       .cta-button.green a:hover::after {
@@ -217,25 +222,30 @@
         width: 100%;
         margin: 0;
         padding: 1rem 4rem;
-        background-color: transparent;
+        /* background-color: transparent; */
         transition: background-color 0.3s ease-in-out;
       }
 
       .navbar-nav .nav-item .nav-link {
-        color: #fff !important;
+        color: #2bdf78 !important;
         padding: 0.8rem 1.2rem;
         font-size: 1.1rem;
+        font-weight: 700;
         transition: color 0.3s ease, background-color 0.3s ease;
       }
 
       .navbar-nav .nav-item .nav-link:hover,
       .navbar-nav .nav-item .nav-link.active {
-        color: #faba0c !important;
+        color: #2bdf78 !important;
         transition: background-color 0.3s ease-in-out;
       }
 
+      /* .navbar-nav .nav-item .nav-link:hover {
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+      } */
+
       .navbar-nav .nav-item .nav-link.active {
-        color: #faba0c !important;
+        color: #2bdf78 !important;
         position: relative;
       }
 
@@ -245,7 +255,7 @@
         width: 28%;
         left: 25%;
         bottom: 8px;
-        border-bottom: 2px solid #faba0c;
+        border-bottom: 2px solid #2bdf78;
       }
 
       .navbar .nav-item img {
@@ -315,7 +325,7 @@
         background-color: white;
         padding-top: 20px;
         margin-bottom: 3rem;
-        border: 2px solid #faba0c;
+        border: 2px solid #2bdf78;
         border-radius: 10px;
       }
 
@@ -465,7 +475,7 @@
       }
 
       .footer-support a {
-        color: #faba0c;
+        color: #2bdf78;
       }
 
       .footer-social ul,
@@ -487,7 +497,7 @@
 
       .footer-social a:hover,
       .footer-legal a:hover {
-        color: #faba0c;
+        color: #2bdf78;
       }
 
       .footer-bottom {
@@ -654,7 +664,7 @@
         style="transition: background-color 0.3s ease-in-out"
       >
         <a class="navbar-brand" href="{% url 'index' %}"
-          ><img src="{% static 'images/lalala13.png' %}" alt="logo"
+          ><img src="{% static 'images/sl.png' %}" alt="logo" width="65px" height="50px"
         /></a>
         <button
           class="navbar-toggler"
@@ -764,7 +774,7 @@
                         <img
                           class="img-fluid service-image"
                           alt="100%x280"
-                          src="{% static 'images/step1.png' %}"
+                          src="{% static 'images/step1g.png' %}"
                         />
                         <div class="card-body">
                           <h4 class="card-title">Connect IoT Device</h4>
@@ -785,7 +795,7 @@
                         <img
                           class="img-fluid service-image"
                           alt="100%x280"
-                          src="{% static 'images/step2.png' %}"
+                          src="{% static 'images/step2g.png' %}"
                         />
                         <div class="card-body card-two">
                           <h4 class="card-title">Start Detection</h4>
@@ -806,7 +816,7 @@
                         <img
                           class="img-fluid service-image"
                           alt="100%x280"
-                          src="{% static 'images/step3.png' %}"
+                          src="{% static 'images/step3g.png' %}"
                         />
                         <div class="card-body">
                           <h4 class="card-title">View Real-Time Data</h4>
@@ -937,7 +947,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-about">
-          <img src="{% static 'images/lalala13.png' %}" alt="" />
+          <img src="{% static 'images/slll.png' %}" alt="" />
           <p>Empowering Your Soil <br />for Optimal Growth</p>
         </div>
 
@@ -945,9 +955,9 @@
           <h3>Customer Support</h3>
           <p>
             Email:
-            <a href="#">support@soilution.com</a>
+            <a href="#">soilution42@gmail.com</a>
           </p>
-          <p>Phone: <a href="#">+1 (555) 123-4567</a></p>
+          <p>Phone: <a href="#">+63 9784 324 5766</a></p>
         </div>
 
         <div class="footer-legal">
