--- a/templates/password_reset_email.html
+++ b/templates/password_reset_email.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Reset</title>
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
