--- a/templates/password_reset_sent.html
+++ b/templates/password_reset_sent.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soilution - Reset Password</title>
-    <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link rel="stylesheet" href="{% static 'css/password_reset_sent.css' %}" />
     <style>
       body {
