--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -1,11 +1,11 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% load static %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Update Profile</title>
-    <link rel="icon" type="image/png" href="{% static 'images/smiley.png' %}" />
+    <link rel="icon" type="image/png" href="{% static 'images/sll2.png' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
