--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -299,7 +299,7 @@
             <li
               class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
             >
-              <a href="{% url 'settings' %}" class="flex items-center space-x-2 active-link"
+              <a href="{% url 'dashboard_s' %}" class="flex items-center space-x-2 active-link"
                 ><img
                   src="{% static 'images/settings.png' %}"
                   alt=""
