--- a/templates/logs.html
+++ b/templates/logs.html
@@ -267,7 +267,7 @@
               class="mt-4 mb-5 relative flex items-center space-x-4 text-black group cursor-pointer"
             >
               <a
-                href="{% url 'settings' %}"
+                href="{% url 'dashboard_s' %}"
                 class="flex items-center space-x-2 active-link"
                 ><img
                   src="{% static 'images/settings.png' %}"
