added admin pages
	modified:   detector/__pycache__/adapter.cpython-310.pyc
	modified:   detector/__pycache__/backends.cpython-310.pyc
	new file:   detector/__pycache__/consumers.cpython-310.pyc
	new file:   detector/__pycache__/context_processors.cpython-310.pyc
	modified:   detector/__pycache__/forms.cpython-310.pyc
	new file:   detector/__pycache__/middleware.cpython-310.pyc
	modified:   detector/__pycache__/models.cpython-310.pyc
	new file:   detector/__pycache__/routing.cpython-310.pyc
	modified:   detector/__pycache__/signals.cpython-310.pyc
	modified:   detector/__pycache__/views.cpython-310.pyc
	modified:   detector/adapter.py
	new file:   detector/consumers.py
	new file:   detector/context_processors.py
	modified:   detector/forms.py
	new file:   detector/middleware.py
	new file:   detector/migrations/0008_message.py
	modified:   detector/migrations/__pycache__/0002_customuser.cpython-310.pyc
	modified:   detector/migrations/__pycache__/0003_workspace_delete_customuser.cpython-310.pyc
	modified:   detector/migrations/__pycache__/0004_alter_workspace_options_alter_workspace_description.cpython-310.pyc
	modified:   detector/migrations/__pycache__/0005_profile.cpython-310.pyc
	modified:   detector/migrations/__pycache__/0006_alter_profile_profile_image.cpython-310.pyc
	modified:   detector/migrations/__pycache__/0007_profile_role.cpython-310.pyc
	new file:   detector/migrations/__pycache__/0008_message.cpython-310.pyc
	modified:   detector/models.py
	new file:   detector/routing.py
	modified:   detector/signals.py
	modified:   detector/views.py
	new file:   soilution/__pycache__/asgi.cpython-310.pyc
	modified:   soilution/__pycache__/settings.cpython-310.pyc
	modified:   soilution/__pycache__/urls.cpython-310.pyc
	modified:   soilution/asgi.py
	modified:   soilution/urls.py
	new file:   static/images/add.png
	new file:   static/images/add2.png
	new file:   static/images/delete.png
	new file:   static/images/grid.png
	new file:   static/images/grid2.png
	new fi

--- a/templates/detector/index.html
+++ b/templates/detector/index.html
@@ -40,27 +40,14 @@
         background-size: 60% auto;
         background-position: calc(100% + 15%) calc(50% + 10%);
         background-repeat: no-repeat;
-        /* background-position: top; */
         margin: 0;
         display: flex;
         flex-direction: column;
         height: 100vh;
       }
 
-      /* body::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: -1;
-      } */
-
       .material-symbols-outlined {
         font-size: 2rem;
-        /* color: #faba0c; #2bdf78 */
         color: #2bdf78;
         margin-right: 10px;
         margin-top: 0;
@@ -955,7 +942,7 @@
           <h3>Customer Support</h3>
           <p>
             Email:
-            <a href="#">soilution42@gmail.com</a>
+            <a href="{% url 'contact_support' %}">soilution42@gmail.com</a>
           </p>
           <p>Phone: <a href="#">+63 9784 324 5766</a></p>
         </div>
