--- a/templates/password_reset_sent.html
+++ b/templates/password_reset_sent.html
@@ -72,7 +72,7 @@
       style="transition: background-color 0.3s ease-in-out"
     >
       <a class="navbar-brand" href="{% url 'index' %}"
-        ><img src="{% static 'images/lalala13.png' %}" alt="logo"
+        ><img src="{% static 'images/sl.png' %}" alt="logo" width="65px" height="50px"
       /></a>
     </nav>
 
